# huffyuv

./: CMakeLists.txt  README.md  compile.sh
.github/workflows/: main.yml
source/: avi.hpp  huffyuv.hpp
tests/: convert.hpp  decode_encode.cpp  decode_match_samples.cpp  encode_match_samples.cpp  nothing.cpp  ppm.hpp  samples.hpp  validate_conversion.cpp  validate_samples.cpp
